# grantish-prime-translator

./: Cargo.toml  LICENSE
src/: grantish_prime.rs  main.rs
